--- a/Project0/game.ipynb
+++ b/Project0/game.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "from game_v2 import score_game\n",
-    "from game_v2 import random_predict"
+    "from game_v2 import random_predict\n",
+    "from game_v3 import game_core_v3"
    ]
   },
   {
@@ -26,23 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за:107 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за: 97 попыток\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "107"
+       "97"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,12 +53,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "## Алгоритм угадывает сам \n",
+    "### учитывая информацию больше или меньше предполагаемое число по отношению к загаданному"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ваш алгоритм угадывает число в среднем за: 7 попыток\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_game(game_core_v3)\n"
    ]
   }
  ],
